// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Card Component Dark Theme should match the snapshot without alert class  1`] = `
<DocumentFragment>
  .c0 {
  background-color: #0F1535;
  border: 0.0625rem solid #21497D;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #E80000;
  border-color: #E80000;
}

.c0.sucess {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #F7A300;
  border-color: #F7A300;
}

.c0 a {
  color: inherit;
  text-decoration: none;
}

<div
    class="c0 alert"
  />
</DocumentFragment>
`;

exports[`Card Component Dark Theme should match the snapshot without any class  1`] = `
<DocumentFragment>
  .c0 {
  background-color: #0F1535;
  border: 0.0625rem solid #21497D;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #E80000;
  border-color: #E80000;
}

.c0.sucess {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #F7A300;
  border-color: #F7A300;
}

.c0 a {
  color: inherit;
  text-decoration: none;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Card Component Dark Theme should match the snapshot without sucess class  1`] = `
<DocumentFragment>
  .c0 {
  background-color: #0F1535;
  border: 0.0625rem solid #21497D;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #E80000;
  border-color: #E80000;
}

.c0.sucess {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #F7A300;
  border-color: #F7A300;
}

.c0 a {
  color: inherit;
  text-decoration: none;
}

<div
    class="c0 sucess"
  />
</DocumentFragment>
`;

exports[`Card Component Dark Theme should match the snapshot without warning class  1`] = `
<DocumentFragment>
  .c0 {
  background-color: #0F1535;
  border: 0.0625rem solid #21497D;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #E80000;
  border-color: #E80000;
}

.c0.sucess {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #F7A300;
  border-color: #F7A300;
}

.c0 a {
  color: inherit;
  text-decoration: none;
}

<div
    class="c0 warning"
  />
</DocumentFragment>
`;

exports[`Card Component Light Theme should match the snapshot without alert class  1`] = `
<DocumentFragment>
  .c0 {
  background-color: #FFF;
  border: 0.0625rem solid #E0E0E0;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #E80000;
  border-color: #E80000;
}

.c0.sucess {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #F7A300;
  border-color: #F7A300;
}

.c0 a {
  color: inherit;
  text-decoration: none;
}

<div
    class="c0 alert"
  />
</DocumentFragment>
`;

exports[`Card Component Light Theme should match the snapshot without any class  1`] = `
<DocumentFragment>
  .c0 {
  background-color: #FFF;
  border: 0.0625rem solid #E0E0E0;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #E80000;
  border-color: #E80000;
}

.c0.sucess {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #F7A300;
  border-color: #F7A300;
}

.c0 a {
  color: inherit;
  text-decoration: none;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Card Component Light Theme should match the snapshot without sucess class  1`] = `
<DocumentFragment>
  .c0 {
  background-color: #FFF;
  border: 0.0625rem solid #E0E0E0;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #E80000;
  border-color: #E80000;
}

.c0.sucess {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #F7A300;
  border-color: #F7A300;
}

.c0 a {
  color: inherit;
  text-decoration: none;
}

<div
    class="c0 sucess"
  />
</DocumentFragment>
`;

exports[`Card Component Light Theme should match the snapshot without warning class  1`] = `
<DocumentFragment>
  .c0 {
  background-color: #FFF;
  border: 0.0625rem solid #E0E0E0;
  border-radius: 0.5rem;
  box-sizing: border-box;
  padding: 1.5rem;
  width: 100%;
}

.c0.alert {
  background-color: #E80000;
  border-color: #E80000;
}

.c0.sucess {
  background-color: #008000;
  border-color: #008000;
}

.c0.warning {
  background-color: #F7A300;
  border-color: #F7A300;
}

.c0 a {
  color: inherit;
  text-decoration: none;
}

<div
    class="c0 warning"
  />
</DocumentFragment>
`;
